# cli

./: .gitignore  README.md  pyproject.toml
cli/: main.py  test.py
cm/: default.toml  errors.py  main.py  tester.py
