[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Josh cmd-line <joshua.stoneham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.5"
rich = "^13.4.2"
toml = "^0.10.2"
typer = "^0.9.0"
trogon = "^0.5.0"


[tool.poetry.scripts]
"cm" = "cm.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
