[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Josh cmd-line <joshua.stoneham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.4.2"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.scripts]
"binary" = "cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
